--- a/templates/product_list.html
+++ b/templates/product_list.html
@@ -1,8 +1,15 @@
-{% extends "bootstrap/base.html" %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Product Watcher</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+</head>
+<body>
 
-{% block title %}
-Product Watcher
-{% endblock %}
+
+
 
 {% block content %}
 <div class="container">
@@ -35,3 +42,6 @@ Product Watcher
     </table>
 </div>
 {% endblock %}
+
+</body>
+</html>
