--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,12 +13,11 @@
         $j(document).ready(function () {
             $j('#myTable').DataTable();
         });
-        </script>
-        <script>
-            var edges = {{ edges|tojson }};
-            console.log(edges);
-        </script>
-    
+    </script>
+    <script>
+        var data = {{ data|tojson }};
+        console.log(data);
+    </script>
     <script>
     document.getElementById('debug-button').addEventListener('click', function() {
         var debugDiv = document.getElementById('debug');
@@ -30,20 +28,9 @@
         }
     });
     </script>
-
 </head>
 <body>
-
-
-
-
-
-
 {% block navbar %}
-
-
-
-
 <div class="navbar navbar-inverse" role="navigation">
     <div class="container">
         <div class="navbar-header">
@@ -58,7 +45,6 @@
     </div>
 </div>
 {% endblock %}
-
 {% block content %}
 <div class="container">
     <table id="myTable" class="table table-striped">
@@ -68,7 +54,7 @@
                 <th scope="col">Title</th>
                 <th scope="col">Color</th>
                 <th scope="col">Retail Price</th>
-                <th scope="col">Average Price</th>
+                <th scope="col">Average Deadstock Price</th>
                 <th scope="col">Sold</th>
                 <th scope="col">Highest Bid</th>
                 <th scope="col">Lowest Ask</th>
@@ -76,30 +62,30 @@
             </tr>
         </thead>
         <tbody>
-            {% for item in edges %}
+            {% for item in data %}
             <tr>
-                <td><img src="{{ item['node']['media']['thumbUrl'] }}" alt="{{ item['node']['title'] }}" style="width: 50px;"></td>
-                <td>{{ item['node']['title'] }}</td>
+                <td><img src="{{ item['media']['thumbUrl'] }}" alt="{{ item['title'] }}" style="width: 50px;"></td>
+                <td>{{ item['title'] }}</td>
                 <td>
-                    {% if 'PM' in item['node']['title'] %}
-                        {{ item['node']['title'].split('PM', 1)[1].strip() }}
+                    {% if 'PM' in item['title'] %}
+                        {{ item['title'].split('PM', 1)[1].strip() }}
                     {% else %}
-                        {{ item['node']['title'].split()[-1] }}
+                        {{ item['title'].split()[-1] }}
                     {% endif %}
                 </td>                
                 <td>
-                    {% for trait in item['node']['productTraits'] %}
+                    {% for trait in item['traits'] %}
                         {% if trait['name'] == 'Retail Price' %}
                             {{ trait['value'] }}
                         {% endif %}
                     {% endfor %}
                 </td>
-                <td>{{ item['node']['market']['deadStock']['averagePrice'] }}</td>
-                <td>{{ item['node']['market']['deadStock']['sold'] }}</td>
-                <td>{{ item['node']['market']['bidAskData']['highestBid'] }}</td>
-                <td>{{ item['node']['market']['bidAskData']['lowestAsk'] }}</td>
+                <td>{{ item['market']['averageDeadstockPrice'] }}</td>
+                <td>{{ item['market']['deadstockSold'] }}</td>
+                <td>{{ item['market']['highestBid'] }}</td>
+                <td>{{ item['market']['lowestAsk'] }}</td>
 
-                <td><a href="https://stockx.com/fr-fr/{{ item['node']['urlKey'] }}" class="btn btn-primary">View on StockX</a></td>
+                <td><a href="https://stockx.com/fr-fr/{{ item['urlKey'] }}" class="btn btn-primary">View on StockX</a></td>
             </tr>
             {% endfor %}
         </tbody>
