--- a/templates/home.html
+++ b/templates/home.html
@@ -1,36 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Price Watcher</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.4/css/jquery.dataTables.css">
-    <script type="text/javascript" charset="utf8" src="https://code.jquery.com/jquery-3.5.1.js"></script>
-    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.4/js/jquery.dataTables.js"></script>
-    <script>
-        var $j = jQuery.noConflict();
-        $j(document).ready(function () {
-            $j('#myTable').DataTable();
-        });
+{% extends "bootstrap/base.html" %}
+
+{% block title %}
+Price Watcher
+{% endblock %}
+
+{% block navbar %}
+
+
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.4/css/jquery.dataTables.css">
+<script type="text/javascript" charset="utf8" src="https://code.jquery.com/jquery-3.5.1.js"></script>
+<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.4/js/jquery.dataTables.js"></script>
+
+<script>
+    var $j = jQuery.noConflict();
+    $j(document).ready(function () {
+        $j('#myTable').DataTable();
+    });
     </script>
     <script>
         var data = {{ data|tojson }};
         console.log(data);
     </script>
+
     <script>
-    document.getElementById('debug-button').addEventListener('click', function() {
-        var debugDiv = document.getElementById('debug');
-        if (debugDiv.style.display === 'none') {
-            debugDiv.style.display = 'block';
-        } else {
-            debugDiv.style.display = 'none';
-        }
-    });
-    </script>
-</head>
-<body>
-{% block navbar %}
+document.getElementById('debug-button').addEventListener('click', function() {
+    var debugDiv = document.getElementById('debug');
+    if (debugDiv.style.display === 'none') {
+        debugDiv.style.display = 'block';
+    } else {
+        debugDiv.style.display = 'none';
+    }
+});
+</script>
+
+
 <div class="navbar navbar-inverse" role="navigation">
     <div class="container">
         <div class="navbar-header">
@@ -45,6 +48,7 @@
     </div>
 </div>
 {% endblock %}
+
 {% block content %}
 <div class="container">
     <table id="myTable" class="table table-striped">
@@ -54,14 +58,14 @@
                 <th scope="col">Title</th>
                 <th scope="col">Color</th>
                 <th scope="col">Retail Price</th>
-                <th scope="col">Average Deadstock Price</th>
+                <th scope="col">Average Price</th>
                 <th scope="col">Sold</th>
                 <th scope="col">Highest Bid</th>
                 <th scope="col">Lowest Ask</th>
                 <th scope="col">Link</th>
             </tr>
         </thead>
-        <tbody>
+         <tbody>
             {% for item in data %}
             <tr>
                 <td><img src="{{ item['media']['thumbUrl'] }}" alt="{{ item['title'] }}" style="width: 50px;"></td>
@@ -90,22 +94,19 @@
             {% endfor %}
         </tbody>
     </table>
+</div>
 
 
-    {% if debug_info %}
-    <br>
-    <button id="debug-button">Show Debug Info</button>
-<br>
 
+
+{% if debug_info %}
 <div id="debug" style="display: none;">
     <pre>{{ debug_info }}</pre>
 </div>
-</div>
+
+<button id="debug-button">Show Debug Info</button>
 
 
 {% endif %}
 
 {% endblock %}
-
-</body>
-</html>
