--- a/templates/product_list.html
+++ b/templates/product_list.html
@@ -1,15 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product Watcher</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-</head>
-<body>
+{% extends "bootstrap/base.html" %}
 
-
-
+{% block title %}
+Product Watcher
+{% endblock %}
 
 {% block content %}
 <div class="container">
@@ -42,6 +35,3 @@
     </table>
 </div>
 {% endblock %}
-
-</body>
-</html>
