--- a/templates/sales_stats.html
+++ b/templates/sales_stats.html
@@ -210,6 +210,9 @@ Sales Stats
     <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#salesStats">
         See Sales Stats
     </button>
+    <h1 style="text-align: center;">
+        {{ brand }} {{ model }}
+    </h1>
     <br><br>
     <div id="salesStats" class="collapse">
         <div class="container">
@@ -220,7 +223,7 @@ Sales Stats
     </div>
    
     <!-- Second Section -->
-    <h2>All Products</h2>
+    <h3>All Products</h3>
     <table id="allProductsTable" class="table table-striped">
         <thead>
             <tr>
