--- a/templates/product_list.html
+++ b/templates/product_list.html
@@ -19,6 +19,7 @@ Product Watcher
     <br></br>
 
     <!-- Add a button to see sales stats for all models -->
+    <a href="{{ url_for('estimate_price_page') }}" class="btn btn-primary">Estimate Price for a product</a>
     <a href="{{ url_for('sales_stats_allmodels') }}" class="btn btn-primary">See All Models Sales Stats</a>
 
     <br></br>
